Fix: escape a selected set of characters in DN and SAN (#118)